--- a/021_regression_sol.ipynb
+++ b/021_regression_sol.ipynb
@@ -513,6 +513,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RMSE 是我們模型準確性的主要指標，它告訴我們我們的預測有多接近。\n",
+    "\n",
+    "現在，你試試看！ 加載一些不同的數據並獲得 RMSE。 嘗試以兩種方式進行，一種使用庫函數，一種使用我們進行的 RMSE 計算。\n",
+    "\n",
+    "使用膝關節值作為 X，體脂作為 Y。構建模型以根據膝關節尺寸預測體脂。 計算該模型的 RMSE。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 114,
    "metadata": {},
