--- a/012_Errors_Basic_Time_Series_sol.ipynb
+++ b/012_Errors_Basic_Time_Series_sol.ipynb
@@ -286,6 +286,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 評估預測\n",
+    "\n",
+    "好的，現在我們都對第 31 天的價格有了預測，但誰的預測更準確呢？我們不知道。\n",
+    "\n",
+    "我們可以相互評估預測的方法是在我們知道答案的地方進行試驗，並將我們的預測與真實值進行比較。這個基本思想適用於我們稍後進行的機器學習。廣義的過程是：\n",
+    "\n",
+    "- 使用一些算法來創建一些進行預測的模型。\n",
+    "\n",
+    "- 在我們知道實際結果的一些舊（測試）數據上使用這些模型。\n",
+    "\n",
+    "- 將我們的預測與那些已知值進行比較——我們越接近，該模型就越準確。\n",
+    "\n",
+    "- 選擇最準確的（通常 - 有時還有其他因素）模型，因為它的預測是最好的。\n",
+    "\n",
+    "\n",
+    "\n",
+    "因此，對於我們這裡的 gas 價格情景：\n",
+    "\n",
+    "- 我們有兩個模型 - 3 天平均值和 5 天平均值。我們可以擁有更多，包括複雜的。\n",
+    "\n",
+    "- 通過模型運行我們的舊（測試）數據以生成預測。我們也知道這些預測的正確值。\n",
+    "\n",
+    "- 對於每個預測，計算它的錯誤程度 - 錯誤。 （又名殘差）。\n",
+    "\n",
+    "- 將錯誤匯總為單個錯誤度量。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -631,6 +662,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 圖形結果\n",
+    "\n",
+    "在圖中，我們可以看到經驗數據以及我們的模型。 \n",
+    "\n",
+    "由於我們的模型都只是“最近 X 天”的平均值，因此每個模型似乎都是經驗數據的延遲形狀。 \n",
+    "\n",
+    "我們還可以很容易地在圖表上直觀地看到錯誤量。 \n",
+    "\n",
+    "這條線是真實的數據，點組是我們創建的模型，該模型是數據的模型（並且可以用來期待做出預測。）\n",
+    "\n",
+    "誤差只是真實值與模型值之間的差距。 \n",
+    "\n",
+    "例如，在第 26 天左右，3 天滾動平均模型提供了近乎完美的預測 - 誤差接近 0。 \n",
+    "\n",
+    "在第 11 天，兩個模型都提供了有很多錯誤的預測，每個模型都大約高出 0.10。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -838,6 +890,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 錯誤指標和 MSE\n",
+    "\n",
+    "更好，更現實的錯誤估計。\n",
+    "\n",
+    "然而，在大多數情況下，我們不使用絕對值來處理負數，而是使用平方。 這有幾個原因：\n",
+    "\n",
+    "- 簡單：在平方時，小錯誤比大錯誤受到的“懲罰”要少。\n",
+    "\n",
+    "- 懶惰：它非常普遍，很好理解，並且到處都在實施。\n",
+    "\n",
+    "- Mathy：在進行實際數學運算時，絕對值計算通常很糟糕。 \n",
+    "\n",
+    "平方給出了最“有效”的誤差估計——你需要最少數量的值來創建估計，出於數學原因我們真的不關心\n",
+    "\n",
+    "我們可以計算一個常見的誤差度量，MSE - 均方誤差。 聽起來就是這樣。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -903,6 +976,19 @@
     "So, for these calculations the 3 day average model is more accurate with our data. With new data, there's no assurance that it will continue to be more accurate, but based on the data we have, we can trust it more. The more old (training) data we have, the more robust these error caclulations will generally be. \n",
     "\n",
     "We don't need to do this by hand, there are existing functions that do it for us..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 均方根誤差\n",
+    "\n",
+    "與我們通常將方差轉換為標準差的方式類似，我們通常將 MSE 轉換為 RMSE。 \n",
+    "\n",
+    "RMSE 與原始數據處於“相同條件”，我們可以將其大致視為典型預測中的預期誤差量。\n",
+    "\n",
+    "出於我們的目的，進入機器學習，我們通常將錯誤視為我們的“分數”——我們希望創建錯誤較少的模型，因此它們的預測更接近現實，因此我們可以更有信心地依賴我們的預測 ."
    ]
   },
   {
@@ -1623,7 +1709,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('ml3950')",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1637,12 +1723,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4d722d3adfa415172c1f5238b519fb86b488acdae450fd691ab06c09f4ca9173"
+    "hash": "40846f95e88ae24f681f7d79d7396bca459ce37b2ecada686cfbc3bbe9daaf0c"
    }
   }
  },
