--- a/030_Probability_Bayes_sol.ipynb
+++ b/030_Probability_Bayes_sol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Probability and Bayes\n",
+    "# Probability, Conditional Probability, and Bayes\n",
     "\n",
     "There are a couple of different ways to understand the ideas we've looked at in statistics:\n",
     "<ul>\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "19  N020     BMW    red  night    yes"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "0.65"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "0.3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,8 +356,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P(BMW) = .3\n",
-    "P(B) = .3\n",
+    "$ P(BMW) = .3 $\n",
+    "\n",
+    "$ P(B) = .3 $\n",
     "\n",
     "#### Chances of Both?\n",
     "\n",
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +376,7 @@
        "0.2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,8 +391,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P(B and S) = .2\n",
-    "P(S and B) = .2 "
+    "$ P(B and S) = .2 $\n",
+    "\n",
+    "$ P(S and B) = .2 $"
    ]
   },
   {
@@ -403,10 +405,11 @@
     "#### What if I have a BMW? Then how likely is it my car gets stolen?\n",
     "\n",
     "This requires another concept - conditional probability. In order to computer this I need to calculate the probability that my car gets stolen, GIVEN the assumption that my car is a BMW. Expressed in probability notation:\n",
-    "<ul>\n",
-    "<li>P(S|BMW) = ?\n",
-    "<li>P(S|B) = ?\n",
-    "</ul>\n",
+    "\n",
+    "$ P(S|BMW) = ? $\n",
+    "\n",
+    "$ P(S|B) = ? $\n",
+    "\n",
     "\n",
     "When expressing conditional probability we use a vertical bar, sometimes called a pipe, inside the probability notation. The first value is the thing we are getting the probability of; the second value is the condition. So we can think of it as \"if the second part is true, what is the probability of the first part?\"\n",
     "\n",
@@ -419,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +431,7 @@
        "0.6666666666666666"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,18 +459,18 @@
     "We can calculate these probabilities slightly more efficently than all that dataframe manipulation.\n",
     "Probability of my car being stolen if it is a BMW:\n",
     "\n",
-    "pSB = P(Stolen and BMW)/P(BMW) = pBoth/pBMW\n",
+    "$ p(S|B) = \\frac{P(Stolen and BMW)}{P(BMW)} = \\frac{pBoth}{pBMW} $\n",
     "\n",
     "This is theorem #1:\n",
     "\n",
-    "In general form: $$P(A|B) = \\frac{P(A~\\mathrm{and}~B)}{P(B)}$$\n",
+    "In general form: $ P(A|B) = \\frac{P(A~\\mathrm{and}~B)}{P(B)} $\n",
     "\n",
     "in code..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +479,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,15 +501,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2/3\n",
-      "4/5\n"
+      "2/3\n"
      ]
     }
    ],
@@ -525,19 +527,19 @@
    "source": [
     "What about the other way around? If my car is stolen, what's the chances that it is a BMW?\n",
     "\n",
-    "P(BMW | Stolen) = P(BMW and STOLEN)/P(STOLEN)"
+    "$ P(BMW | Stolen) = \\frac{P(BMW and STOLEN)}{P(STOLEN)} $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3076923076923077\n"
+      "4/13\n"
      ]
     }
    ],
@@ -558,16 +560,16 @@
     "\n",
     "We can manipulate what we did above by multiplying both sides by pBMW. We get:\n",
     "\n",
-    "p(Stolen and BMW) = P(Stolen)*P(S|B)\n",
+    "$ p(Stolen and BMW) = P(Stolen)*P(S|B) $\n",
     "\n",
     "This is Theorem 2:\n",
     "\n",
-    "In nice print, generally: $$P(A~\\mathrm{and}~B) = P(B) ~ P(A|B)$$"
+    "In nice print, generally: $ P(A~\\mathrm{and}~B) = P(B) ~ P(A|B) $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -594,12 +596,14 @@
     "We know, from intuition and from above, that conjunctions (and) works in either direction: P(Stolen and BMW) = P(BMW and STOLEN)\n",
     "\n",
     "Written in general form:\n",
-    "$$P(A~\\mathrm{and}~B) = P(B~\\mathrm{and}~A)$$\n",
+    "\n",
+    "$ P(A~\\mathrm{and}~B) = P(B~\\mathrm{and}~A) $\n",
     "\n",
     "If we apply Theorem 2 from above to both sides, we have: P(BMW)*P(STOLEN | BMW) = P(STOLEN)*P(BMW | STOLEN)\n",
     "\n",
     "Written in general form:\n",
-    "$$P(B) P(A|B) = P(A) P(B|A)$$\n",
+    "\n",
+    "$ P(B) P(A|B) = P(A) P(B|A) $\n",
     "\n",
     "With this equation we can solve for whatever we don't know - like either conditional:\n",
     "\n",
@@ -609,21 +613,21 @@
     "\n",
     "If we divide through by $P(B)$, we get Theorem 3:\n",
     "\n",
-    "$$P(A|B) = \\frac{P(A) P(B|A)}{P(B)}$$\n",
+    "$ P(A|B) = \\frac{P(A) P(B|A)}{P(B)} $\n",
     "\n",
     "That is Bayes's Theorem."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6666666666666667\n"
+      "2/3\n"
      ]
     }
    ],
@@ -650,7 +654,7 @@
     "In order to make all this stuff work, we need one other thing - the law of total probability.\n",
     "Here's one form of the law, expressed in mathematical notation:\n",
     "\n",
-    "$$P(A) = P(B_1 \\mathrm{and} A) + P(B_2 \\mathrm{and} A)$$\n",
+    "$ P(A) = P(B_1 \\mathrm{and} A) + P(B_2 \\mathrm{and} A) $\n",
     "\n",
     "In words, this means two things:\n",
     "\n",
@@ -669,12 +673,12 @@
     "\n",
     "On the Titanic, what is the probability that someone who died is from third class? Let's set up our equation\n",
     "\n",
-    "p(3rd | Dead) = p(3rd)*p(Dead | 3rd)/p(Dead)"
+    "$ p(3rd | Dead) = \\frac{p(3rd)*p(Dead | 3rd)}{p(Dead)} $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +830,7 @@
        "4    man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -873,6 +877,8 @@
    "source": [
     "Damn, that's tuff. \n",
     "\n",
+    "![Die](images/die.gif \"Die\")\n",
+    "\n",
     "So, if you're going on a boat, be rich! This key fact will be on the final. "
    ]
   },
@@ -884,36 +890,14 @@
     "\n",
     "What is the probability of your car being stolen if it is a German car?\n",
     "\n",
-    "Note: In our data the German cars are BMWs and Audis. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "P(Stolen | German) = P(Stolen) * P(German | Stolen) / P(German)"
+    "Note: In our data the German cars are BMWs and Audis. \n",
+    "\n",
+    "$ P(Stolen | German) = P(Stolen) * \\frac{P(German | Stolen)}{P(German)} $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2/3\n"
-     ]
-    }
-   ],
-   "source": [
-    "print((pSF*pGermanStolen)/pGerman)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +906,7 @@
        "Fraction(3, 5)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -960,11 +944,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/3\n"
+     ]
+    }
+   ],
    "source": [
-    "#What is the probability of a theft happening at night?"
+    "print((pSF*pGermanStolen)/pGerman)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise - What is the Probability of a Theft Happening at Night?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.75 0.65 0.4\n",
+      "0.4615384615384615\n"
+     ]
+    }
+   ],
+   "source": [
+    "# P(night | stolen) = P(night) * P(stolen|night)/P(stolen)\n",
+    "\n",
+    "tmp = df[df[\"Time\"] == \"night\"]\n",
+    "pSN = len(tmp[tmp[\"Stolen\"] == \"yes\"])/len(tmp)\n",
+    "pStolen2 = len(df[df[\"Stolen\"] == \"yes\"])/len(df)\n",
+    "pNight = len(tmp)/len(df)\n",
+    "print(pSN, pStolen2, pNight)\n",
+    "print(pNight * (pSN/pStolen))"
    ]
   },
   {
@@ -974,7 +998,7 @@
     "As we can see above, when we have all the data, we can calculate all the probabilities directly. Bayes is more useful when we don't have all that. That's next time... Something to consider....\n",
     "\n",
     "\n",
-    "## The Monty Hall Problem\n",
+    "## Thought Experiment - The Monty Hall Problem\n",
     "\n",
     "The Monty Hall problem is based on a game show called *Let's Make a Deal*. If you are a contestant on the show, here's how the game works:\n",
     "\n",
