--- a/004_Cumulative_dist_sol.ipynb
+++ b/004_Cumulative_dist_sol.ipynb
@@ -43,6 +43,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 數組\n",
+    "\n",
+    "對於這個例子，我們還將使用與數據框不同的數據結構來保存我們的數據——一個數組。 \n",
+    "\n",
+    "數組是一種很常見的數據結構，我們可以把它粗略地想像成一個編號的項目列表。\n",
+    "\n",
+    "稍後我們需要使用數組來做一些事情，我們在這裡查看它們只是為了獲得介紹。 \n",
+    "\n",
+    "關於我們將使用的大部分功能，一件很酷的事情是許多函數可以接受許多不同格式的數據——數據框、系列、數組、列表等等！ \n",
+    "\n",
+    "所有這些數據結構都在不同程度上具有重疊的特徵——這裡的重要特徵是它們都是可迭代的，或者它們都將事物保存在可以被視為“事物列表”的事物中。 \n",
+    "\n",
+    "因此，我們可以互換地輸入任何這些數據結構中的數據，並獲得相同的結果。 \n",
+    "\n",
+    "我們需要建立使用不同存儲方式的數據的舒適度。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -79,6 +100,23 @@
     "# Dump the non-numbers\n",
     "nba = nba[~np.isnan(nba)]\n",
     "nfl = nfl[~np.isnan(nfl)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 這段代碼創建了一個略有不同的數據結構——一個 numpy 數組。\n",
+    "# 數組是一維數據結構——實際上只是一個大列表。\n",
+    "# 下面的代碼與兩者基本相同。那是因為兩者都是“可迭代的”\n",
+    "# 這意味著（基本上），具有的東西可以一次賦予一個值。\n",
+    "# 下面的函數可以採用其中一種，幾乎沒有變化，也可以採用 pandas 系列\n",
+    "# 這是一種 pandas 對數組的看法。我指出這一點有幾個原因：\n",
+    "# - 示例有時會顯示不同的數據結構，其餘代碼並沒有真正改變。\n",
+    "# - 有些東西需要其他數據結構，最值得注意的是 ML 需要數組。\n",
+    "# 我們不需要在使用不同的數據結構時對問題有不同的理解。\n",
+    "# 這基本上就像用垃圾桶、可重複使用的袋子或塑料袋買雜貨。\n",
+    "# The all 允許我們做同樣的事情（雜貨店/機器學習），並且它們可以被使用"
    ]
   },
   {
@@ -146,6 +184,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "另一方面，數組不是 Pandas Dataframes，因此它們沒有可用的功能。 \n",
+    "\n",
+    "要獲得像均值這樣的統計數據，我們需要使用不同的函數。 \n",
+    "\n",
+    "如果我們查看下面的函數調用，它們的格式為“numpy.function()”——這表明該函數不“屬於”數據結構對象本身，而是可以用任何函數調用 我們作為論據提供的數據。\n",
+    "\n",
+    "現在這種區別很小，但是隨著您獲得編程經驗，這種區別會變得更加清晰和相關。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -174,6 +225,19 @@
     "One thing that is often useful is to do bulk actions on our data, for example to convert between cm and inches. Rather than trying to do something complex like loop through each row of the data and generate the calculation, we can state the calculation and tell our program to apply it to every row. \n",
     "\n",
     "This apply function will have the effect of applying whatever calculation defined (x * 2.54) to each item in that array. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 應用函數\n",
+    "\n",
+    "通常有用的一件事是對我們的數據執行批量操作，例如在厘米和英寸之間進行轉換。 \n",
+    "\n",
+    "與其嘗試做一些複雜的事情，比如遍歷每一行數據並生成計算，我們可以聲明計算並告訴我們的程序將它應用於每一行。\n",
+    "\n",
+    "此應用函數將具有將定義的任何計算 (x * 2.54) 應用於該數組中的每個項目的效果。"
    ]
   },
   {
@@ -228,6 +292,29 @@
     "In order to calculate things, we need two functions that are basically inverses of eachother. Percentile rank takes in a value and calculates what percentile that is in. Percentile does the opposite, takes in a percentile, and calculates the value. (Read the book on this, it has the details)\n",
     "Percentile rank: value->ranking on percentile scale. e.g. I scored 72%, and the function tells me I'm in the 80th percentile. \n",
     "percentile: ranking->value. e.g. I'm in the 64th percentile of my graduating class, that means I have a 3.1 GPA."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "百分位數衡量一個值在尺度上有多遠——一個值大於多少項目，反之，有多少項目高於它。\n",
+    "\n",
+    "例如。如果你在一個 10 人的班級中，並且你是第二高的，那麼你在身高的第 90 個百分位 - 該樣本中 90% 的人與你相同或比你矮；\n",
+    "\n",
+    "剩下的 10% 更高。如果您在標準化考試中獲得過分數，您可能會得到類似這樣的數字。 （這本書對百分位的東西有更徹底的解釋）\n",
+    "\n",
+    "為了計算事物，我們需要兩個基本上互為反函數的函數。\n",
+    "\n",
+    "百分位數排名接受一個值併計算其所在的百分位數。\n",
+    "\n",
+    "百分位做相反的事情，接受一個百分位數併計算該值。 （閱讀這本書，它有詳細信息）\n",
+    "\n",
+    "\n",
+    "百分位排名：值->百分位排名。例如我得分為 72%，該函數告訴我我處於第 80 個百分位。\n",
+    "\n",
+    "\n",
+    "百分位：排名->價值。例如我在畢業班的第 64 個百分位，這意味著我的 GPA 為 3.1。"
    ]
   },
   {
@@ -500,7 +587,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('ml3950')",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -514,12 +601,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4d722d3adfa415172c1f5238b519fb86b488acdae450fd691ab06c09f4ca9173"
+    "hash": "40846f95e88ae24f681f7d79d7396bca459ce37b2ecada686cfbc3bbe9daaf0c"
    }
   }
  },
