--- a/016_Hypothesis_Test_1_sol.ipynb
+++ b/016_Hypothesis_Test_1_sol.ipynb
@@ -297,6 +297,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### T檢驗\n",
+    "\n",
+    "我們將使用的主要假設檢驗是 t 檢驗。 \n",
+    "\n",
+    "這是一個可以評估兩個樣本之間是否存在差異的測試 - 或者更具體地說，給定兩個樣本，兩者之間的差異有多大可能是隨機發生的。 \n",
+    "\n",
+    "我們正試圖確定兩組是不同的，在某種程度上我們非常（對於各種級別非常）確信這不是隨機的。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### T 檢驗邊\n",
+    "\n",
+    "我們可以運行標記為單側或雙側的 t 檢驗。 \n",
+    "\n",
+    "這裡的區別在於，兩側的 t 檢驗比較不同（更大或更小），而一側的測試則更大或更小。 \n",
+    "\n",
+    "根據具體情況，兩者都可能更有用。 例如，假設我們正在對一種晚期癌症藥物進行藥物試驗，我們正在測試它是否能延長人們的壽命：\n",
+    "<ul>\n",
+    "<li> 我們使用的數據集是藥物組和安慰劑組的預期壽命。\n",
+    "<li> 檢驗統計量是兩組之間均值的差異。\n",
+    "<li> <b>雙側測試將確定兩組的存活時間是否存在差異。</b>\n",
+    "<li> <b>單側測試將確定服用藥物的人是否比服用安慰劑的人有更長*的生命時間。</b> 據推測，如果需要，它可以更小，同樣的操作。\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>重要提示：</b> \n",
+    "\n",
+    "- 本書示例從頭開始構建計算。 為此，他們創建自定義類和函數。 \n",
+    "\n",
+    "我假設你們都沒有在編程課程中詳細介紹過這一點。 \n",
+    "\n",
+    "它不是超級複雜，值得一試，但我們現在不會這樣做。 \n",
+    "\n",
+    "請瀏覽 9.1-9.4 中的示例，然後是 9.5-end 並嘗試重複並理解他們正在編碼的內容。 \n",
+    "\n",
+    "我們可以在您完成課堂內容後重新訪問它。 現在，我們將使用庫函數和本書內容的簡化版本來進行測試。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Define Test Statistic\n",
     "\n",
     "First, we need a test statistic. For this one it will be the BMI - we want to determine if the BMI of diabetics being higher than the non-diabetics is due to chance or not? Aka is this difference statistically significant. \n",
@@ -423,7 +472,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P = 0.3\n",
+      "P = 0.23\n",
       "Accept null hypothesis - Effect may be due to random chance\n"
      ]
     }
@@ -561,11 +610,11 @@
     {
      "data": {
       "text/plain": [
-       "[2.5050259214189197,\n",
-       " 0.9705112603977426,\n",
-       " 0.10770307889779929,\n",
-       " 1.1257480538098719,\n",
-       " 2.2464951907849695]"
+       "[0.375052092883692,\n",
+       " 1.5510760306056,\n",
+       " 1.04675857240494,\n",
+       " 0.581639967327348,\n",
+       " 0.7854856723732695]"
       ]
      },
      "execution_count": 11,
@@ -821,11 +870,11 @@
     {
      "data": {
       "text/plain": [
-       "([1.7344877344877432,\n",
-       "  1.3746031746031804,\n",
-       "  0.3903318903318933,\n",
-       "  1.4447330447330415,\n",
-       "  0.5330447330447328],\n",
+       "([0.5797979797979735,\n",
+       "  1.2927849927849877,\n",
+       "  0.007070707070710114,\n",
+       "  0.2291486291486251,\n",
+       "  2.15772005772007],\n",
        " '<--- Some Example Differences')"
       ]
      },
@@ -861,7 +910,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P = 0.18\n",
+      "P = 0.14\n",
       "Accept null hypothesis - Effect may be due to random chance\n"
      ]
     }
