--- a/012_Errors_Basic_Time_Series_sol.ipynb
+++ b/012_Errors_Basic_Time_Series_sol.ipynb
@@ -43,6 +43,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 錯誤\n",
+    "\n",
+    "在這裡，我們將看看誤差計算。本書在第 8 章中以略有不同的方式介紹了相同的材料。\n",
+    "\n",
+    "我認為這是理解錯誤的最簡單方法，它也讓我們對時間序列計算有了一個小小的了解——或者我們有一個數據集是一系列值的情況。\n",
+    "\n",
+    "當我們進入推論統計並最終進入機器學習時，錯誤至關重要。\n",
+    "\n",
+    "我們正在生成預測，因此我們需要一些方法來客觀地評估我們期望這些預測的準確性。\n",
+    "\n",
+    "計算誤差使我們能夠對模型的準確性給出一個數字。如果我們回想起上次使用的一些數據，我們會在查看回歸線時第一次看到錯誤。\n",
+    "\n",
+    "### 散點圖和最佳擬合線\n",
+    "\n",
+    "我們將從上次的一些熟悉數據開始，並使用兩個相關值構建散點圖。\n",
+    "\n",
+    "我們還可以生成一條最佳擬合線，這是我們的模型或對值<i>應該</i>的預測。從技術上講，這是我們機器學習模型的預測——線性回歸。\n",
+    "\n",
+    "我們將在幾個類中填寫更多關於創建預測的內容，現在關鍵部分是我們在這裡繪製了兩件事：\n",
+    "<ul>\n",
+    "<li> 經驗數據點。這些是我們數據中的“真實”值。\n",
+    "<li> 最佳擬合線。這是我們的模型——數據的表示。這是我們對 Y 值在 X 的任何值下應該是什麼的“預測”。\n",
+    "</ul>\n",
+    "\n",
+    "錯誤的檢查著眼於這些之間的差異——錯誤越少，真實數據和我們的模型就越接近。\n",
+    "\n",
+    "<b>注意：</b> linregress 函數現在幾乎可以忽略，我們只是用它來獲取斜率和截距。我們將在幾週內對此進行更深入的研究，目前它只是一條捷徑。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
