--- a/025_Logistic_Reg_sol.ipynb
+++ b/025_Logistic_Reg_sol.ipynb
@@ -401,6 +401,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 實際使用\n",
+    "\n",
+    "這些都是每個人通過高中的預測概率。\n",
+    "\n",
+    "現在，有點奇怪。我們從所有係數的一些非常隨機的值開始了整個事情，那麼我們為什麼要相信這些預測呢？\n",
+    "\n",
+    "好吧，現在，我們不會。要製作一個真正準確的模型，我們需要做的是檢查我們現在做得有多好，然後進行一些改進。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 成本和損失\n",
+    "\n",
+    "這裡介紹的一些新概念對未來很重要，它們是成本和損失的概念。\n",
+    "\n",
+    "在進行這些類型的迭代訓練過程時，我們的進度由我們的損失或錯誤量來跟踪。這個數量是通過我們的損失函數計算的，或者是如何計算誤差的。\n",
+    "\n",
+    "這與我們之前查看的 MSE/RMSE 過程直接相當，我們有一些計算來確定我們的整體準確性。\n",
+    "\n",
+    "每次我們進行迭代時，我們都會得到一些錯誤或損失。最好的解決方案是這種損失最低的地方。\n",
+    "\n",
+    "這與當損失 - 線性最小二乘距離 - 最低時最佳線性回歸模型的最佳狀態相同。\n",
+    "\n",
+    "<b>注意：</b>成本和損失這兩個術語經常可以互換使用，這通常沒有問題。\n",
+    "\n",
+    "從技術上講，損失函數是針對每個特定示例的，而成本是總體摘要。實際上，交換術語並沒有什麼大不了的——實際上不會有很多（如果有的話）混淆的場景。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### In Real Usage\n",
     "\n",
     "Those are all the predicted probabilities of each person passing high school. \n",
@@ -441,11 +475,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "＃＃＃ 梯度下降\n",
+    "\n",
+    "梯度下降是許多算法試圖最小化損失的方法。簡而言之，這個過程就是：\n",
+    "<ul>\n",
+    "<li> 創建模型。\n",
+    "<li> 測量損失。\n",
+    "<li> 調整模型的值（即這裡的斜率和截距）\n",
+    "<li> 再次檢查損失。\n",
+    "<li> 重複直到達到最低損失值。 （即最準確的模型）\n",
+    "</ul>\n",
+    "\n",
+    "該算法通過一些微積分和矩陣數學來調整每次試驗之間的權重，“知道該走哪條路”，我們在研究神經網絡時會看到這些。\n",
+    "\n",
+    "該算法基本上可以使用偏導數將誤差歸因於不同的值（斜率），以及它們是否太高或太低。每一步都會稍微移動這些值，然後我們重新檢查。\n",
+    "\n",
+    "當我們進入機器學習的東西時，我們將更多地探索梯度下降的細節，現在理解一般的想法就足夠了。\n",
+    "\n",
+    "這個過程是大多數機器學習模型“學習”的方式，這也是它們在長時間處理時發生的情況。\n",
+    "\n",
+    "每次迭代都會（希望）將結果移動到模型誤差較小的點，最終我們要么“找到底部”——在邏輯回歸中就是上面對數-機率回歸的斜率和截距值，或者我們達到迭代的極限。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### What is our Loss?\n",
     "\n",
     "Our loss in the example above is a calculation the summarizes all of our individual errors. In the previous cell we calculated the probability of each person passing (being 1), our original Y data shows us the true probability of each person passing (either 0 or 1). Each prediction has an error of the distance between that true value and our expected probability. \n",
     "\n",
     "E.g. for the second item, this person passed, so the real value is 1. We predicted a ~40% likelihood of them passing, so our error there is ~60%. Person 4 passed, we predicted a ~92% chance of them passing, so our error is ~8%. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 我們的損失是多少？\n",
+    "\n",
+    "我們在上面的例子中的損失是一個總結了我們所有個人錯誤的計算。 \n",
+    "\n",
+    "在前面的單元格中，我們計算了每個人通過的概率（為 1），我們的原始 Y 數據向我們顯示了每個人通過的真實概率（0 或 1）。 \n",
+    "\n",
+    "每個預測都有一個真實值與我們預期概率之間的距離誤差。\n",
+    "\n",
+    "例如。 對於第二項，這個人通過了，所以實際值為 1。我們預測他們通過的可能性約為 40%，因此我們的誤差約為 60%。 \n",
+    "\n",
+    "第 4 個人通過了，我們預測他們通過的概率約為 92%，因此我們的誤差為 8%。"
    ]
   },
   {
@@ -530,6 +607,34 @@
     "</ul>\n",
     "\n",
     "This process is called Gradient Descent and is something we will care about more in ML class. Basically we define something called a loss function, which measures how much error we have. We then repeat a bunch of trials with different coef values, and measure the loss each time. We keep repeating until we've found the lowest amount of loss - or the smallest amount of error. The math can be complex, but the idea is pretty simple. If we manually changed the array of b values, ran the model, collected the LIKE value, and finally selected the combination with the best LIKE, that'd be a crude version of the same thing. This idea is common later on. Here, sklearn or statsmodels do it for us. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我們的總體目標是找到該值的最低可能性。這個值越低，我們的模型預測的越接近現實，我們就越準確。現在的過程是：\n",
+    "<ul>\n",
+    "<li> 取這個總誤差量，用它來調整那些起始值。 （我們編造的開始）\n",
+    "    <ul>\n",
+    "    <li> 這一步我們將更深入地研究神經網絡。 In 涉及一些偏導數，它們（某種程度上）允許我們向後工作並將部分錯誤歸因於原始輸入。\n",
+    "    </ul>\n",
+    "<li> 計算不同起點的新誤差。\n",
+    "<li> 重複 - 每個階段都應該讓我們更接近“真實”答案。\n",
+    "    <ul>\n",
+    "    <li> 換句話說，我們不斷地重複這個過程，直到找到能夠最大限度地降低總體成本/損失（錯誤量）的解決方案。\n",
+    "    </ul>\n",
+    "</ul>\n",
+    "\n",
+    "這個過程稱為梯度下降，是我們在 ML 課程中會更關心的內容。\n",
+    "\n",
+    "基本上我們定義了一個叫做損失函數的東西，它衡量我們有多少錯誤。然後我們用不同的 coef 值重複一系列試驗，並測量每次的損失。\n",
+    "\n",
+    "我們不斷重複，直到我們找到最低的損失量 - 或者最小的錯誤量。數學可能很複雜，但想法很簡單。\n",
+    "\n",
+    "如果我們手動更改 b 值數組，運行模型，收集 LIKE 值，最後選擇具有最佳 LIKE 的組合，那將是同一事物的粗略版本。\n",
+    "\n",
+    "這種想法後來很普遍。在這裡，sklearn 或 statsmodels 為我們做這件事。"
    ]
   },
   {
