--- a/014_Estimation_Applications_sol.ipynb
+++ b/014_Estimation_Applications_sol.ipynb
@@ -1526,7 +1526,7 @@
     "\n",
     "我們可以根據之前所有的民意調查估計，一個人大約有 49% 的可能會投票給拜登，46% 的人可能會投票給特朗普。\n",
     "\n",
-    "注意：538 為獲得這些數字所做的工作已經涉及一些估計。他們進行多項民意調查，並嘗試將它們結合起來以做出盡可能準確的估計。\n",
+    "為獲得這些數字所做的工作已經涉及一些估計。他們進行多項民意調查，並嘗試將它們結合起來以做出盡可能準確的估計。\n",
     "\n",
     "他們試圖糾正歷史上偏向民主黨或偏向代表或傾向於更準確/更不准確的民意調查公司。我們可以通過一次民意調查來做到這一點，它會是一樣的。\n",
     "\n",
@@ -1580,6 +1580,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因此，在重要的選票中，大約 51.5% 投給了拜登，48.5% 投給了特朗普。 這如何轉化為投票的人。 對於每個人，我們可以做一個函數來基本上得到一個響應。\n",
+    "\n",
+    "此人將返回一票。 這將是對特朗普或拜登的投票。 該決定將是隨機的，但會根據我們之前計算的可能性進行設定——隨著我們收集的選票數量越來越大，大約 51.5% 的選民將投票給拜登。\n",
+    "\n",
+    "注意：例如，我們將投票給拜登為 True/1。 對特朗普的投票是錯誤/0。 這是任意的。\n",
+    "\n",
+    "下面我們有一個使用二項式分佈生成預測的函數 - 它是 1 或 0。（1 個樣本的二項式分佈也稱為伯努利）"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -1593,16 +1606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
