--- a/016_Hypothesis_Test_1_sol.ipynb
+++ b/016_Hypothesis_Test_1_sol.ipynb
@@ -472,7 +472,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P = 0.23\n",
+      "P = 0.21\n",
       "Accept null hypothesis - Effect may be due to random chance\n"
      ]
     }
@@ -523,6 +523,17 @@
     "Above is a simplified, and non reusable version of what is going on in the book's code. Try adjusting the test statistic (difference between heads and tails) up and down, and see if the results make sense. We should probably expect to see a low p-value (difference unlikely to be random) if the test stat is big - out of 100 rolls, we'd expect that something is weird if we were to get 80 heads and 20 tails, that is unlikely to randomly occur by chance. On the other hand, if the test stat is 1, we'd expect to see a split of 51 heads to 49 tails all the time, that will very commonly happen by random variation. \n",
     "\n",
     "We can do a slightly more complex one - the coin flip idea is pretty simple, what if we want to test a difference in means like the first example?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 手動 T 檢驗模擬結果\n",
+    "\n",
+    "以上是本書代碼中發生的事情的簡化且不可重用的版本。 嘗試上下調整測試統計量（正面和反面之間的差異），看看結果是否有意義。 如果測試統計數據很大，我們可能應該期望看到較低的 p 值（差異不太可能是隨機的）——在 100 次擲骰中，如果我們得到 80 次正面和 20 次反面，我們會認為有些事情很奇怪，那 不太可能隨機發生。 另一方面，如果測試統計數據為 1，我們預計始終會看到 51 次正面對 49 次反面的分裂，這通常會因隨機變化而發生。\n",
+    "\n",
+    "我們可以做一個稍微複雜一點的——拋硬幣的想法很簡單，如果我們想像第一個例子一樣測試均值的差異怎麼辦？"
    ]
   },
   {
@@ -580,7 +591,7 @@
     "#Combines the two groups.\n",
     "#Get the length of one for splitting below. \n",
     "allBp = np.hstack((dNegBP, dPosBP))\n",
-    "n = len(dNegBP)\n"
+    "n = len(dNegBP)"
    ]
   },
   {
@@ -604,30 +615,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.375052092883692,\n",
-       " 1.5510760306056,\n",
-       " 1.04675857240494,\n",
-       " 0.581639967327348,\n",
-       " 0.7854856723732695]"
+       "[0.3844621513944162,\n",
+       " 0.46011768824284616,\n",
+       " 0.6484772208238212,\n",
+       " 1.2014035906582876,\n",
+       " 0.47226991615129066]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Generate random splits, and add the differnce in their means to a list. \n",
-    "diffs = []\n",
     "#Write the loop. For each of 100 trials, shuffle the list of BP, then split it into two. \n",
     "#Check the difference in BP and add that value to the  list above. \n",
     "# The list of 100 diffs in BP is the final goal. \n",
+    "\n",
+    "#Generate random splits，並將它們的差異添加到列表中。\n",
+    "#寫循環。 對於 100 次試驗中的每一次，洗牌 BP 列表，然後將其分成兩部分。\n",
+    "#檢查 BP 的差異並將該值添加到上面的列表中。\n",
+    "# BP中的100個差異列表是最終目標。\n",
+    "\n",
+    "diffs = []\n",
+    "\n",
     "for i in range(100):\n",
     "    np.random.shuffle(allBp)\n",
     "    data1 = allBp[n:]\n",
@@ -698,6 +716,38 @@
     "<b>Note:</b> The scipy function normalizes the test statistic by the amount of error, so it may not be identical. We don't really care about this detail much at all. \n",
     "\n",
     "<b>Note 2:</b> here we are doing the default, a two-sided test, or one that just looks for a difference between the two. This matches the comparison we did in the simulation abouve, looking for the size of the difference. Adding alternative=\"greater/lesser\" would change the test to one that is checking if one is larger than the other specifically. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### T 測試：簡單方法與模擬\n",
+    "\n",
+    "出於多種原因，我們上面所做的“手工”操作很好，但它可能看起來不像您以前見過的 Z/t 測試。\n",
+    "\n",
+    "這是因為這些測試是參數化的 - 或者它們取決於對數據分佈的假設，在這種情況下為正態分佈。\n",
+    "\n",
+    "因為我們知道正態分佈的分佈信息，並且可以根據均值和標準差進行計算，所以我們所做的模擬部分可以通過直接計算答案來代替，就像下面的 ttest 函數一樣。\n",
+    "\n",
+    "這用基於正態分佈的已知屬性的計算替換了模擬試驗位。\n",
+    "\n",
+    "\n",
+    "我們的模擬更具普適性——我們可以使用相同的想法來評估幾乎任何事情發生的可能性。\n",
+    "\n",
+    "我們運行模擬試驗和計算結果的邏輯將起作用——唯一的限制是模型需要與現實相匹配。\n",
+    "\n",
+    "我們的模型或選擇的分析分佈或概率計算越接近場景的真實情況，這些模擬就會越準確和可靠。\n",
+    "\n",
+    "換句話說，當我們選擇分佈（或概率）來對我們的數據建模時，我們實際上是在聲明“該數據遵循這些屬性”，並在該假設的基礎上構建所有未來的計算。\n",
+    "\n",
+    "如果我們選擇的模型在匹配我們的數據方面做得不好，我們的估計和預測可能會做得很好，但潛在的錯誤將持續存在。\n",
+    "\n",
+    "<b>注意：</b> scipy 函數通過誤差量對測試統計量進行歸一化，因此它可能不完全相同。我們根本不關心這個細節。\n",
+    "\n",
+    "<b>注意 2：</b> 這裡我們進行默認的雙側測試，或者只是尋找兩者之間的差異。\n",
+    "\n",
+    "這與我們在上面的模擬中所做的比較相匹配，尋找差異的大小。添加 alternative=\"greater/lesser\" 會將測試更改為專門檢查一個是否大於另一個的測試。"
    ]
   },
   {
@@ -870,11 +920,11 @@
     {
      "data": {
       "text/plain": [
-       "([0.5797979797979735,\n",
-       "  1.2927849927849877,\n",
-       "  0.007070707070710114,\n",
-       "  0.2291486291486251,\n",
-       "  2.15772005772007],\n",
+       "([0.6825396825396837,\n",
+       "  0.5330447330447328,\n",
+       "  0.23838383838383947,\n",
+       "  0.4137085137085137,\n",
+       "  0.9981240981240944],\n",
        " '<--- Some Example Differences')"
       ]
      },
