--- a/SELF_PRACTICE_df, series, index.ipynb
+++ b/SELF_PRACTICE_df, series, index.ipynb
@@ -308,7 +308,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 從寫的很棒的同學拿來的，資料清理用\n",
+    "def PrepareData(dataFrame:pd.DataFrame):\n",
+    "    if type(dataFrame) != pd.DataFrame:\n",
+    "        raise RuntimeError(\"that is not a data frame\")\n",
+    "    #drop unnamed column\n",
+    "    dataFrame.drop(columns = {\"Unnamed: 0\", \"cb_person_cred_hist_length\"}, inplace = True)\n",
+    "    dataFrame = dataFrame[dataFrame[\"person_income\"] < 300000]\n",
+    "    dataFrame = dataFrame[dataFrame[\"loan_percent_income\"] < 0.65]\n",
+    "    dataFrame = dataFrame[dataFrame[\"person_emp_length\"] < 50]\n",
+    "    dataFrame = dataFrame[~dataFrame[\"loan_int_rate\"].isnull()]\n",
+    "    dataFrame = dataFrame[dataFrame[\"person_age\"] < 80]\n",
+    "    dataFrame[\"person_income\"] = np.log(dataFrame[\"person_income\"])\n",
+    "    dataFrame = dataFrame[dataFrame[\"person_home_ownership\"] != \"OTHER\"]\n",
+    "    # dataFrame[\"person_home_ownership\"] = pd.Series(dataFrame[\"person_home_ownership\"]).cat.remove_unused_categories()\n",
+    "    dataFrame = pd.get_dummies(dataFrame, drop_first=True)\n",
+    "    return pd.DataFrame(dataFrame)\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(\"train.csv\")\n",
+    "df = PrepareData(df)"
+   ]
   },
   {
    "cell_type": "code",
