--- a/031_Bayes_2_sol.ipynb
+++ b/031_Bayes_2_sol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "Index: [Class A, Class B]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "Class B    0.5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 339,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "Class B    0.5        0.50"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "Class B    0.5        0.50   0.250"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "Class B    0.5        0.50   0.250   0.666667"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "12 Side      1/3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
        "12 Side      1/3       1/12"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "12 Side      1/3       1/12   1/36       2/9"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
        "Loss   1/2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
        "Loss   1/2        0.10"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "Loss   1/2        0.10   0.05   0.47619"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 350,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
        "13     Sunny  Mild     High     t   no"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
        "Not Play  5/14"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
        "Not Play  5/14        2/5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
        "Not Play  5/14        2/5    1/7       2/5"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
        "Not Play   2/5"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 355,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
        "Not Play   2/5        1/5"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1552,7 @@
        "Not Play   2/5        1/5   2/25       2/7"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 357,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1573,7 @@
        "0.7142857142857143"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1747,7 @@
        "Not Play  5/14"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 361,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1769,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1831,7 @@
        "Not Play  5/14        2/5    1/7       2/5"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
@@ -1907,7 +1907,7 @@
        "Not Play   1/7"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 363,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
@@ -1982,7 +1982,7 @@
        "Not Play   1/7        2/5   2/35      6/11"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 364,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
@@ -2053,7 +2053,7 @@
        "Not Play  2/35"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 365,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2128,7 @@
        "Not Play  2/35        1/5  2/175      9/34"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 366,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2153,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2199,7 @@
        "Not Play  2/175"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 367,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2212,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -2274,7 +2274,7 @@
        "Not Play  2/175        2/5  4/875    27/152"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2291,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
        "0.8223684210526315"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2320,7 +2320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -2377,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
@@ -2597,7 +2597,7 @@
        "19  N020     BMW    red  night    yes"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 374,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2609,7 +2609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
@@ -2655,7 +2655,7 @@
        "Not Stolen   0.35"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2672,7 +2672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -2727,7 +2727,7 @@
        "Not Stolen   0.35    0.285714     0.1   0.333333"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2742,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -2797,7 +2797,7 @@
        "Not Stolen    0.1    0.142857  0.014286      0.104"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2814,7 +2814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -2869,7 +2869,7 @@
        "Not Stolen  0.014286    0.285714  0.004082   0.067037"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2893,13 +2893,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.054000000000000006 1.1275253033494794\n",
       "Yes 1.0519395134779752 0.9329631098770329\n",
       "No 0.07558578987150413 0.06703689012296704\n"
      ]
@@ -2949,7 +2950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
@@ -3000,7 +3001,7 @@
        "Door 3   1/3"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 371,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3040,7 +3041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -3095,7 +3096,7 @@
        "Door 3   1/3          0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3108,7 +3109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [
     {
@@ -3171,7 +3172,7 @@
        "Door 3   1/3          0      0         0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3201,7 +3202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3.9.7 ('ml3950')",
    "language": "python",
    "name": "python3"
   },
@@ -3215,12 +3216,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "40846f95e88ae24f681f7d79d7396bca459ce37b2ecada686cfbc3bbe9daaf0c"
+    "hash": "4d722d3adfa415172c1f5238b519fb86b488acdae450fd691ab06c09f4ca9173"
    }
   }
  },
